--- a/styles/global.css
+++ b/styles/global.css
@@ -26,7 +26,7 @@ body{
 
 }
 
-h1 h2 h3 {
+h1 h2 h3 p{
     font: inherit;
 }
 a {
@@ -37,3 +37,4 @@ a {
 a:hover {
     color: var(--brand-color-light);
 }
+
